# rustvrty

./: Cargo.toml  README.md
entity/: Cargo.toml  cargo.toml
entity/src/entities/: auth.rs  mod.rs  prelude.rs  tokens.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230205_142940_auth.rs  m20230214_152908_tokens.rs
src/: db.rs  lib.rs  main.rs  sec.rs
src/sec/: watchword.rs
